--- a/home/config/waybar/style.css
+++ b/home/config/waybar/style.css
@@ -23,7 +23,6 @@ window#waybar {
 	border-radius: 10px;
 	transition: none;
 	background: @base;
-	border: 2px solid @rose;
 
 }
 
@@ -37,7 +36,6 @@ window#waybar {
 	transition: none;
 	background: @base;
 	color: @overlay;
-	border: 2px solid @rose;
 }
 
 #pulseaudio {
@@ -50,7 +48,6 @@ window#waybar {
 	transition: none;
 	background: @base;
 	color: @love;
-	border: 2px solid @rose;
 }
 
 #performance {
@@ -63,7 +60,6 @@ window#waybar {
 	border-radius: 10px;
 	transition: none;
 	background: @base;
-	border: 2px solid @rose;
 }
 
 #clock {
@@ -100,6 +96,8 @@ window#waybar {
 
 #workspaces button.active {
 	color: @text;
+	border-radius: 10px;
+	border: 2px solid @rose;
 }
 
 
