--- a/home/config/wofi/style.css
+++ b/home/config/wofi/style.css
@@ -21,7 +21,6 @@ window {
     margin: 0px;
     background-color: #232136;
     border-radius: 10px;
-    border: 2px solid @rose; /*eb6f92*/
     color: @text;
     font-family: 'JetBrainsMono NFP';
     font-size: 14px;
@@ -29,9 +28,9 @@ window {
 
 #input {
     margin: 5px;
-    border-radius: 0px;
-    border: none;
-    border-radius: 0px;
+    border-radius: 10px;
+    border: 2px solid @rose;
+    border-radius: 10px;
     color: @text;
     background-color: @base;
     
@@ -49,7 +48,6 @@ window {
     margin: 15px;
     border: none;
     background-color: @base;
-    border-radius: 10px;
 }
 
 #scroll {
@@ -66,8 +64,9 @@ window {
 #entry:selected {
     background-color: @overlay;
     color: @text;
-    border-radius: 0px;;
     outline: none;
+    border-radius: 10px;
+    border: 2px solid @rose;
 }
 
 #entry:selected * {
