--- a/home/config/waybar/style.css
+++ b/home/config/waybar/style.css
@@ -50,6 +50,18 @@ window#waybar {
 	color: @love;
 }
 
+#pulseaudio.muted {
+    margin-top: 20px;
+	margin-right: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
+	margin-bottom: 0;
+	border-radius: 10px;
+	transition: none;
+	background: @base;
+	color: @muted;
+}
+
 #performance {
 	margin-top: 20px;
 	margin-right: 20px;
