i didnt like it as much as i though i would i still like the unrounded corners though

--- a/home/config/wofi/style.css
+++ b/home/config/wofi/style.css
@@ -1,4 +1,3 @@
-/*
 @define-color base            #232136;
 @define-color surface         #2a273f;
 @define-color overlay         #393552;
@@ -17,30 +16,10 @@
 @define-color highlightLow    #2a283e;
 @define-color highlightMed    #44415a;
 @define-color highlightHigh   #56526e;
-*/
-@define-color base            #232323;
-@define-color surface         #2a2a2a;
-@define-color overlay         #383838;
-
-@define-color muted           #6d6d6d;
-@define-color subtle          #8f8f8f;
-@define-color text            #e0e0e0;
-
-@define-color love            #989898;
-@define-color gold            #cbcbcb;
-@define-color rose            #b0b0b0;
-@define-color pine            #858585;
-@define-color foam            #c6c6c6;
-@define-color iris            #b3b3b3;
-
-@define-color highlightLow    #2a2a2a;
-@define-color highlightMed    #434343;
-@define-color highlightHigh   #555555;
 
 window {
     margin: 0px;
-    background-color: #232136;
-    border-radius: 10px;
+    background-color: @base;
     color: @text;
     font-family: 'JetBrainsMono NFP';
     font-size: 14px;
@@ -50,7 +29,7 @@ window {
     margin: 5px;
     border-radius: 10px;
     border: 2px solid @rose;
-    border-radius: 10px;
+    /*border-radius: 10px;*/
     color: @text;
     background-color: @base;
     
@@ -85,13 +64,13 @@ window {
     background-color: @overlay;
     color: @text;
     outline: none;
-    border-radius: 10px;
+    /*border-radius: 10px;*/
     border: 2px solid @rose;
 }
 
 #entry:selected * {
     background-color: @overlay;
     color: @text;
-    border-radius: 0px;;
+    border-radius: 0px;
     outline: none;
 }
