--- a/home/config/wofi/style.css
+++ b/home/config/wofi/style.css
@@ -27,7 +27,7 @@ window {
 
 #input {
     margin: 5px;
-    border-radius: 10px;
+    border-radius: 0px;
     border: 2px solid @rose;
     /*border-radius: 10px;*/
     color: @text;
@@ -61,7 +61,7 @@ window {
 } 
 
 #entry:selected {
-    background-color: @overlay;
+    background-color: @highlightMed;
     color: @text;
     outline: none;
     /*border-radius: 10px;*/
@@ -69,7 +69,7 @@ window {
 }
 
 #entry:selected * {
-    background-color: @overlay;
+    background-color: @highlighMed;
     color: @text;
     border-radius: 0px;
     outline: none;
