--- a/home/config/waybar/style.css
+++ b/home/config/waybar/style.css
@@ -5,6 +5,8 @@
 	font-family: JetBrainsMono NFP;
 	font-size: 14px;
 	min-height: 24px;
+    border-radius: 0px;
+    border-color: transparent; 
 }
 
 
@@ -109,6 +111,8 @@ window#waybar {
 	color: @muted;
 	transition: none;
 	background: transparent;
+    /*padding-left: 14px;
+    padding-right: 14px;*/
 }
 
 #workspaces button.active {
