--- a/home/config/wofi/style.css
+++ b/home/config/wofi/style.css
@@ -59,7 +59,11 @@ window {
     margin: 5px;
     border: none;
     color: @text;
-} 
+}
+
+#entry * {
+    color: @muted;
+}
 
 #entry:selected {
     background-color: @base;
