--- a/modules/hm/source-files-directory/home/config/wofi/style.css
+++ b/modules/hm/source-files-directory/home/config/wofi/style.css
@@ -66,11 +66,10 @@ window {
 }
 
 #entry:selected {
-    background-color: @base;
+    background-color: @highlightHigh;
     color: @text;
     outline: none;
     /*border-radius: 10px;*/
-    border: 2px solid @rose;
 }
 
 #entry:selected * {
